--- a/BuchLeaflet/code/4/index_949.html
+++ b/BuchLeaflet/code/4/index_949.html
@@ -13,28 +13,18 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 9);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-/*
 var line = L.polyline(
-[[50.68510, 7.94136],[50.68576, 6.94149],[51.68649, 6.94165]]),
-animatedMarker = L.animatedMarker(line.getLatLngs());*/
-
-var line = L.polyline(
-[[50.68510, 7.94136],[50.68576, 6.94149],[51.68649, 6.94165]]),
+[[50.68510, 7.94136],[50.68510, 7.84136],[50.68510, 7.74136],[50.68510, 7.64136],
+[50.68510, 7.5136],[50.68510, 7.44136],[50.68510, 7.34136],[50.68510, 7.24136]]),
 animatedMarker = L.animatedMarker(line.getLatLngs(), {
-  autoStart: false,
-  distance: 200,  // meters
-  interval: 1000 // milliseconds
+autoStart: false,
+distance: 200,
+interval: 100
 });
-
 mymap.addLayer(animatedMarker);
-
 function start(){animatedMarker.start();}
 function stop(){animatedMarker.stop();}
-
-
 </script>
-
 </body>
 </html>
