--- a/BuchLeaflet/code/4/index_950.html
+++ b/BuchLeaflet/code/4/index_950.html
@@ -11,24 +11,14 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 9);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-/*
-var line = L.polyline(
-[[50.68510, 7.94136],[50.68576, 6.94149],[51.68649, 6.94165]]),
-animatedMarker = L.animatedMarker(line.getLatLngs());*/
-
 var line = L.polyline(
 [[50.68510, 7.94136],[50.68576, 6.94149],[51.68649, 6.94165]]),
 animatedMarker = L.animatedMarker(line.getLatLngs(), {
-  distance: 200,  // meters
-  interval: 1000, // milliseconds
+distance: 2000,
+interval: 1000,
 });
-
 mymap.addLayer(animatedMarker);
-
-
 </script>
-
 </body>
 </html>
