--- a/BuchLeaflet/code/4/index_951.html
+++ b/BuchLeaflet/code/4/index_951.html
@@ -11,17 +11,14 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 12);
-
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
 L.marker([50.27264, 7.26469],
 {
 bounceOnAdd: true,
-bounceOnAddOptions: {duration: 500, height: 100},
-bounceOnAddCallback: function() {console.log("done");}
+bounceOnAddOptions: {duration: 5000, height: 100},
+bounceOnAddCallback: function() {alert("Gelandet!");}
 }
 ).addTo(mymap);
 </script>
-
 </body>
 </html>
