--- a/BuchLeaflet/code/4/index_952.html
+++ b/BuchLeaflet/code/4/index_952.html
@@ -8,20 +8,16 @@
 <link rel="stylesheet" href="MarkerCluster.css"/>
 <link rel="stylesheet" href="MarkerCluster.Default.css"/>
 <script src="leaflet.markercluster-src.js"></script>
-
 <script src="points.js"></script>
 </head>
 <body>
 <div style="height: 700px;" id="mapid"></div>
 <script>
-var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 11);
-
+var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.219264, 7.19469], 13);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
 var markers = L.markerClusterGroup(
-	//{showCoverageOnHover : false}
-	);
-
+//{showCoverageOnHover : false, disableClusteringAtZoom: 17}
+);
 for (var i = 0; i < points.length; i++) {
 var a = points[i];
 var title = a[2];
@@ -30,8 +26,6 @@ marker.bindPopup(title);
 markers.addLayer(marker);
 }
 mymap.addLayer(markers);
-
 </script>
-
 </body>
 </html>
