--- a/BuchLeaflet/code/4/index_955.html
+++ b/BuchLeaflet/code/4/index_955.html
@@ -14,13 +14,13 @@ L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
 var greenIcon = L.icon({
 iconUrl: 'http://leafletjs.com/examples/custom-icons/leaf-green.png',
 shadowUrl: 'http://leafletjs.com/examples/custom-icons/leaf-shadow.png',
-iconSize:     [38, 95], // size of the icon
-shadowSize:   [50, 64], // size of the shadow
-iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
-shadowAnchor: [4, 62],  // the same for the shadow
-popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+iconSize:     [38, 95],
+shadowSize:   [50, 64],
+iconAnchor:   [22, 94],
+shadowAnchor: [4, 62],
+popupAnchor:  [-3, -76]
 });
-L.marker([50.27264, 7.26469], {icon: greenIcon}).addTo(mymap).bindPopup("Ich bin ein Marker mit einem individuelen Image.");
+L.marker([50.27264, 7.26469], {icon: greenIcon}).addTo(mymap).bindPopup("Ich bin ein Marker mit einem individuellen Image.");
 </script>
 </body>
 </html>
