--- a/BuchLeaflet/code/5/index_938.html
+++ b/BuchLeaflet/code/5/index_938.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <script src="esri-leaflet.js"></script>
 <link rel="stylesheet" href="esri-leaflet-geocoder.css">
 <script src="esri-leaflet-geocoder.js"></script>
@@ -13,11 +13,8 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.97264, 7.00469], 12);
-
 L.esri.basemapLayer('Gray').addTo(mymap);
-
 var searchControl = L.esri.Geocoding.geosearch().addTo(mymap);
-
 var results = L.layerGroup().addTo(mymap);
 searchControl.on("results", function(data) {
 results.clearLayers();
@@ -25,9 +22,6 @@ for (var i = data.results.length - 1; i >= 0; i--) {
 results.addLayer(L.marker(data.results[i].latlng));
 }
 });
-
-
-
 </script>
 </body>
 </html>
