--- a/BuchLeaflet/code/5/index_939.html
+++ b/BuchLeaflet/code/5/index_939.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <script src="esri-leaflet.js"></script>
 </head>
 <body>
@@ -12,40 +12,19 @@
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.97264, 7.00469], 12);
 //L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
-//var art = L.esri.dynamicMapLayer("https://geoportal.stadt-koeln.de/arcgis/rest/services/Behindertenparkplaetze/MapServer").addTo(mymap);
-
 L.esri.basemapLayer('Gray').addTo(mymap);
-
 var url = "https://geoportal.stadt-koeln.de/arcgis/rest/services/Behindertenparkplaetze/MapServer";
-
 var dMap = L.esri.dynamicMapLayer({
-  url: url,
-  opacity : 0.25,
-  useCors: false
+url: url,
+opacity : 0.25,
+useCors: false
 }).addTo(mymap);
-
-/*dMap.bindPopup(
-  function(err, featureCollection, response){
-    var count = featureCollection.features.length;
-    return (count) ? count + ' features' : 'kein feature';
-
-});*/
-
 dMap.bindPopup(
-  function(err, featureCollection, response){
-    return featureCollection.features[0].properties.Bezeichnung + '<br>Anzahl: ' + featureCollection.features[0].properties.Anzahl;
-
+function(err, featureCollection, response){
+return featureCollection.features[0].properties.Bezeichnung +
+'<br>Anzahl: ' +
+featureCollection.features[0].properties.Anzahl;
 });
-/*
-dMap.bindPopup(
-  function(err, featureCollection, response){
-    var count = featureCollection.features.length;
-    return (count) ? featureCollection.features[0].properties.Bezeichnung : '';
-
-});
-*/
-
 </script>
 </body>
 </html>
