--- a/BuchLeaflet/code/5/index_941.html
+++ b/BuchLeaflet/code/5/index_941.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"></script>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 <script src="shp.js"></script>
 <script src="leaflet.shpfile.js"></script>
 </head>
@@ -13,13 +13,14 @@
 <script>
 var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.27264, 7.26469], 5);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-
-var shpfile = new L.Shapefile('vg2500_geo84.zip',{
+var shpfile = new L.Shapefile(
+'vg2500_geo84.zip',
+{
 onEachFeature:function(feature, layer)
-{layer.bindPopup(feature.properties.GEN); }});
-//{layer.bindPopup(console.log(feature)); }});
-
-
+{
+layer.bindPopup(feature.properties.GEN);
+}
+});
 shpfile.addTo(mymap);
 </script>
 </body>
