--- a/BuchLeaflet/code/1/index_998a.html
+++ b/BuchLeaflet/code/1/index_998a.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="utf-8"/>
 <title>Eine OSM Karte mit Leaflet</title>
+<link rel="stylesheet" href="../leaflet/leaflet.css" />
+<script src="../leaflet/leaflet.js"></script>
 </head>
 <body>
 </body>
 </html>
-<!--999.html-->
