--- a/BuchLeaflet/code/1/index_990.html
+++ b/BuchLeaflet/code/1/index_990.html
@@ -10,17 +10,17 @@
 <script>
 var mymap = L.map('mapid').setView([50.27264, 7.26469], 7);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
-var dwd = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms", {
+L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms",
+{
 format: 'image/png',
 transparent: true,
-layers:'dwd:Warngebiete_Kreise',
-attribution: "Deutscher Wetterdienst"
+layers:'dwd:Warngebiete_Kreise'
 }).addTo(mymap);
-var dwd = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms", {
-format: 'image/png',
+L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms",
+{
 transparent: true,
-layers:'dwd:Warnungen_Gemeinden_vereinigt',
-attribution: "Deutscher Wetterdienst"
+format: 'image/png',
+layers:'dwd:Warnungen_Gemeinden_vereinigt'
 }).addTo(mymap);
 </script>
 </body>
