--- a/BuchLeaflet/code/1/index_991.html
+++ b/BuchLeaflet/code/1/index_991.html
@@ -9,23 +9,22 @@
 <div style="height: 700px;" id="mapid"></div>
 <script>
 var mymap = L.map('mapid').setView([50.27264, 7.26469], 7);
-var dwd = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms", {
-    format: 'image/png',
-    transparent: true,
-	layers:'dwd:bluemarble',
-	attribution: "Deutscher Wetterdienst"
+L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms",
+{
+transparent: true,
+layers:'dwd:bluemarble',
 }).addTo(mymap);
-var dwd = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms", {
-    format: 'image/png',
-    transparent: true,
-	layers:'dwd:Warngebiete_Kreise',
-	attribution: "Deutscher Wetterdienst"
+L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms",
+{
+format: 'image/png',
+transparent: true,
+layers:'dwd:Warngebiete_Kreise'
 }).addTo(mymap);
-var dwd = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms", {
-    format: 'image/png',
-    transparent: true,
-	layers:'dwd:Warnungen_Gemeinden_vereinigt',
-	attribution: "Deutscher Wetterdienst"
+L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms",
+{
+format: 'image/png',
+transparent: true,
+layers:'dwd:Warnungen_Gemeinden_vereinigt'
 }).addTo(mymap);
 </script>
 </body>
