--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -68,7 +68,7 @@
 								<li>Was machen wir konkret in den nächsten 45 Minuten?
 									<small class="fragment">Wir beginnen mit einer einfachen HTML-Datei und ich zeige euch,
 										wie ihr in vier Schritten eine Karte anzeigen könnt!</small>
-									<small class="fragment">Ein bisschen Theorie - Was sind <b>Koordinaten</b> und wie werden Landarten <b>technisch</b> angezeigt?</small>
+									<small class="fragment">Ein bisschen Theorie - Was sind <b>Koordinaten</b> und wie werden digitale Karten <b>technisch</b> angezeigt?</small>
 									<small class="fragment">Die Karte mit Daten bestücken: Was sind <b>Geodaten</b> und was ist <b>GeoJSON</b>?</small>
 									<small class="fragment">Mit Daten eine Aussage machen: Heatmaps und Choroplethenkarten </small>
 									<small class="fragment">Die Karte <b>individuell</b> gestallten mit <b>benutzerdefinierten Markern</b></small>
@@ -530,9 +530,9 @@
 							Deutsche Wetterdienst (DWD) WMS Dienste
 							mithilfe der Open Source Software Geoserver.
 						</p>
-						<p><small>Die Karten kennt Ihr von vielen Apps.
-						        Neben den amtlichen Warnungen gibt es auch
-								andere Themen wie Pollenflug Gefahrenindex.</small></p>
+						<p><small>Die Karten des DWD kennt Ihr sicher.
+						        Neben den amtlichen Warnungen gibt es auch Karten zu
+								anderen Themen wie Pollenflug Gefahrenindex.</small></p>
 					</section>
 					<section>
 						<pre style="font-size: 16px"><code data-trim data-noescape>
@@ -1570,7 +1570,7 @@
 							</tr>
 						</table>
 					</section>
-					<section>Eine GeoJSON Layer wird gestyled</section>
+					<section>Ein GeoJSON Layer wird gestyled</section>
 					<section>
 						<p>Marker</p>
 						<table>
